Fix search box alignment

--- a/ckanext/geodatagov/fanstatic_library/styles/geodatagov.css
+++ b/ckanext/geodatagov/fanstatic_library/styles/geodatagov.css
@@ -893,7 +893,7 @@ input:-moz-placeholder {
 }
 .search-box-new {
     position: absolute;
-    top: 50px;
+    top: 65px;
     right: 10px;
     margin: 5px 10px;
 }
